Fix overflow on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -122,7 +122,9 @@
         font-size: .8rem;
         width: fit-content;
         bottom: -1.6em;
-        left: 100%;
+        right: 0;
+        left: auto;
+        white-space: nowrap;
         padding: 2px 4px;
         background-color: var(--color-background);
         border-radius: 5px;
